adding jekyll in

--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Geordie Enterprises</title>
-  </head>
-  <body>
-    <h1>Geordie Enterprises Lives!</h1>
-  </body>
-</html>
+---
+layout: default
+title: Geordie Enterprises
+---
 
+Geordie Enterprises Lives!
