added post code to index

--- a/index.html
+++ b/index.html
@@ -3,4 +3,10 @@ layout: default
 title: Geordie Enterprises
 ---
 
-Geordie Enterprises Lives!
+<h2>Geordie Enterprises Lives!</h2>
+
+{% for post in site.posts limit:5 %}
+  <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+{{ post.content }}
+  <em>Posted on {{ post.date | date_to_long_string }}.</em>
+{% endfor %}
